Fixed border radius and added more visible border on button for Lab 4.

--- a/client/lab_4/styles.css
+++ b/client/lab_4/styles.css
@@ -116,12 +116,11 @@
   button.prev-button,
   button.next-button {
     align-self: center;
-    padding: 1px 9px 1px;
-    border-radius: 12px;
-    margin-left: 9px;
-    margin-right: 9px;
+    padding: 1px 8px 1px;
+    border-radius: 9px;
+    margin-left: 7px;
+    margin-right: 7px;
     width: 50px;
-    border-radius: 15px;
     font-weight: bold;
     border: 0;
     cursor: pointer;
@@ -130,6 +129,7 @@
   button:focus,
   button:hover {
     background-color: orange;
+    border: 3px solid seagreen;
   }
 
   .footer {
